# CIS-314

./: Assignment-Data Structures.py  Assignment-First Python.py  CIS 314 – Final Post-Project Report.docx  File Handling Data Processing.py  GUI_Assignment.py  Midterm Post-Project Report.docx  Midterm.py  RNG_and_Sorting.py  test.py
FinalProject/: actionControllerClass.py  fileManagerClass.py  main.py
FinalProject/finalproject.egg-info/: PKG-INFO  SOURCES.txt
SortOrganize/: README.md  pyproject.toml
SortOrganize/SortOrganize/: main.py
SortOrganize/SortOrganize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
